--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shady_grove_church",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anujtaosf.github.io/bailey_park_MA",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
